CI images update

--- a/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-2m-22-hq.html
 lastopen = 2024-06-09 23:45:19
 
 [search]
-lastsearch = 2024-07-20 15:49:05
+lastsearch = 2024-07-20 17:37:41
 
 [www.museum.ru]
 match = 2.9%%
@@ -22,9 +22,9 @@ title = 22 Minutes to Midnight Connecticut Radiante Toro
 url = https://halfwheel.com/22-minutes-to-midnight-connecticut-radiante-toro/412923/
 
 [www.youtube.com]
-match = -15.8%%
-title = Moonshine - Run n Gun - DiPiazzas, Long Beach November ...
-url = https://www.youtube.com/watch?v=QydJnrls8rY
+match = -10.5%%
+title = MINSAN LANG KITANG IIBIGIN Guitar Melodies with Bong ...
+url = https://www.youtube.com/watch?v=ddUTm58bqKQ
 
 [soundcloud.com]
 match = -18.4%%
