--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-20 17:15:55
+lastsearch = 2024-07-20 17:40:37
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -120,4 +120,9 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 match = -21.4%%
 title = BỘ DRAP GIƯỜNG
 url = https://muanhanhvatlieuxaydung.ritavo.com/products/bo-drap-giuong-30
+
+[flexhouse.vn]
+match = -9.1%%
+title = Thảm trải sàn chính hãng, giá tốt
+url = https://flexhouse.vn/tham-lot-san
 
