--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-20 13:37:13
+lastsearch = 2024-07-20 17:38:12
 
 [dvan.org]
 match = -41.7%%
@@ -190,4 +190,9 @@ url = https://www.youtube.com/watch?v=dQw4w9WgXcQ
 match = -308.3%%
 title = Welcome to Department of Biotechnology | Department of ...
 url = https://dbtindia.gov.in/
+
+[doptcirculars.nic.in]
+match = -58.3%%
+title = 2.1 Technical Resignation
+url = https://doptcirculars.nic.in/OM/ViewOM.aspx?id=279&headid=14
 
