--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 15:38:14
+lastsearch = 2024-07-20 17:33:09
 
 [demtot.com]
-match = 42.9%%
-title = Đệm lò xo túi Adaptive
-url = https://demtot.com/dem-lo-xo-tui-adaptive/
+match = 4.8%%
+title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
+url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -95.2%%
-title = Nệm lò xo Tuấn Anh có tốt không? Chọn loại đệm nào phù ...
-url = https://demxanh.com/nem-lo-xo-tuan-anh-co-tot-khong-chon-loai-dem-nao-phu-hop.html
+match = -52.4%%
+title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Nệm Tuấn Anh - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
-match = -66.7%%
-title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
+match = -85.7%%
+title = Bảng giá khuyến mại đệm lò xo Victoria chất lượng cao!
+url = https://sieuthidemonline.vn/dem-lo-xo-victoria/
 
 [demsingapore.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
