--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-20 10:33:39
+lastsearch = 2024-07-20 17:34:45
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=10fb65e5afb7e00f&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwidksvnnrSHAxWPD1kFHWcsCTkQsZYEegQIVBAC
+url = https://www.google.com/search?sca_esv=1c2a48f6c6fa110b&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi7ndPitbWHAxUoFlkFHf2IBBMQsZYEegQISxAC
 
 [produccionesitaca.es]
 match = -21.4%%
