CI images update

--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-20 16:35:28
+lastsearch = 2024-07-20 17:45:50
 
 [www.diepxuan.com]
-match = 48.5%%
-title = Chiếu nhựa Hà Nội 180x300 - Điệp Xuân
+match = 42.4%%
+title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
 match = 9.1%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+title = Chiếu nhựa 🍀𝑭𝑹𝑬𝑬 𝑺𝑯𝑰𝑷🍀Chiếu nhựa loại đẹp Hà Nội ...
+url = https://shopee.vn/Chiếu-nhựa-🍀𝑭𝑹𝑬𝑬-𝑺𝑯𝑰𝑷🍀Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-i.533272024.25669597976
 
 [www.qcyc.ca]
 match = -30.3%%
@@ -65,4 +65,29 @@ url = https://www.tripadvisor.co.za/Attraction_Review-g1652592-d13161996-Reviews
 match = 9.1%%
 title = 1000 Step Cave | Hang Chieu Mai Chau
 url = https://www.youtube.com/watch?v=vDOYPfMJY30
+
+[www.maihuyencorp.com]
+match = 9.1%%
+title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
+url = https://www.maihuyencorp.com/
+
+[tchome.vn]
+match = 56.2%%
+title = CHIẾU NHỰA HÀ NỘI 2MÉT - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-2met-sp22547.html
+
+[online.mmvietnam.com]
+match = 37.9%%
+title = Chiếu du lịch nhựa VM 180*200
+url = https://online.mmvietnam.com/san-pham/mm-ha-dong/chieu-du-lich-nhua-vm-180x200-738170/
+
+[tiki.vn]
+match = -6.1%%
+title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+
+[trangvangvietnam.com]
+match = 6.1%%
+title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
+url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
