--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-07-20 16:13:24
+lastsearch = 2024-07-20 17:50:59
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -37,14 +37,14 @@ title = Nệm Foam Dream ITALY
 url = http://nemgiahuy.com/san-pham/nem-foam-dream-italy
 
 [www.youtube.com]
-match = -12.5%%
-title = Dreamfoam Willow Eurotop Latex Mattress Review
-url = https://www.youtube.com/watch?v=AUxW3t98xPk
+match = -43.8%%
+title = Dreamfoam Essential Mattress Review - The Best Budget ...
+url = https://www.youtube.com/watch?v=YXX8HBeCP2M
 
 [forum.mattressunderground.com]
-match = -28.1%%
-title = dreamfoam 13" gel?? - General Mattresses Questions
-url = https://forum.mattressunderground.com/t/dreamfoam-13-gel/6456
+match = -12.5%%
+title = Ultimate Dreams 13" Gel Memory Foam Mattress
+url = https://forum.mattressunderground.com/t/ultimate-dreams-13-gel-memory-foam-mattress-first-impressions/1121?page=4
 
 [www.home-barista.com]
 match = -6.2%%
