--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-20 13:52:47
+lastsearch = 2024-07-20 17:52:28
 
 [www.everonqb.com]
-match = -60.9%%
-title = Vỏ gối ôm EPCOCEAN 80x100 - Everon Quảng Bình Trang Chủ
+match = -8.7%%
+title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
 url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
 
 [www.reddit.com]
