--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-19 22:52:07
+lastsearch = 2024-07-20 17:48:10
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
 match = 0.0%%
-title = Tìm kiếm từ khóa: LED
-url = https://dungcuykhoakimminh.com/tag/LED&trang-9
+title = Tìm kiếm từ khóa: ion
+url = https://dungcuykhoakimminh.com/tag/ion&trang-19
 
 [mych.vn]
 match = -60.7%%
@@ -225,4 +225,9 @@ url = https://tiki.vn/search?q=chiếu trúc đài loan
 match = -42.9%%
 title = Cây chiêu liêu
 url = https://nongnghiepvang.com/cay-chieu-lieu.html
+
+[baomoi.com]
+match = -50.0%%
+title = Lịch thi đấu bóng đá 14/7: EURO 2024 và Copa America ...
+url = https://baomoi.com/lich-thi-dau-bong-da-14-7-euro-2024-va-copa-america-ha-man-c49626676.epi
 
