--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-20 16:29:29
+lastsearch = 2024-07-20 18:15:06
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
-url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
 match = 14.8%%
@@ -32,9 +32,9 @@ title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyo
 url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [thegioinem.com]
-match = 33.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 7.4%%
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [chiaki.vn]
 match = -3.7%%
