--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-20 13:19:42
+lastsearch = 2024-07-20 18:15:39
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,14 +27,14 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -160.0%%
-title = Svara
-url = https://en.wikipedia.org/wiki/Svara
+match = -23.1%%
+title = Japanese spider crab
+url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -323.1%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -15.4%%
+title = Ipek Gani (@ganipek)
+url = https://www.instagram.com/ganipek/
 
 [www.nebf.com]
 match = -46.2%%
