--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-20 15:37:40
+lastsearch = 2024-07-20 18:17:31
 
 [munghoangphat.com]
 match = -24.0%%
@@ -17,9 +17,9 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -36.0%%
+title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [www.mungbaobao.com]
 match = -32.0%%
