--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-20 18:18:59
+lastsearch = 2024-07-20 18:31:06
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,14 +17,14 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -114.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -71.4%%
+title = Bộ 1 ga chun kèm 2 vỏ gối nằm poly m6 công chúa 3d
+url = https://shopee.vn/product/7593915/46205072
 
 [changagoidemsonghong.com]
-match = -9.5%%
-title = Bộ chăn ga gối WaltDisney mã BY20002
-url = https://changagoidemsonghong.com/chan-ga-goi-by20002
+match = -14.3%%
+title = Bộ chăn ga gối Walt Disney mã BY20001
+url = https://changagoidemsonghong.com/chan-ga-goi-by20001
 
 [demsonghonghanoi.com]
 match = -14.3%%
