--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-20 16:27:39
+lastsearch = 2024-07-20 18:30:53
 
 [eva.vn]
 match = -126.3%%
@@ -72,9 +72,9 @@ title = Cây bóng nước có tác dụng gì?
 url = https://www.vinmec.com/vi/y-hoc-co-truyen/duoc-lieu/cay-bong-nuoc-co-tac-dung-gi/
 
 [www.youtube.com]
-match = -142.9%%
-title = YouTube
-url = https://www.youtube.com/watch?v=eff5P0jzuFg
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [trungquang.com]
 match = 0.0%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -147.4%%
-title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
+match = -57.9%%
+title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
