--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-20 18:18:39
+lastsearch = 2024-07-20 18:24:34
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -272.7%%
+title = Giường & khung giường màu xám gần Kasson, Minnesota
+url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
 
 [www.booking.com]
-match = -45.5%%
-title = Motel 6-Duluth, MN
-url = https://www.booking.com/hotel/us/duluth-200-south-27th-avenue-west.vi.html
+match = -372.7%%
+title = Country Inn & Suites by Radisson, Bloomington at Mall of ...
+url = https://www.booking.com/hotel/us/country-inn-and-suites-at-mall-of-america.vi.html
 
 [www.agoda.com]
 match = -263.6%%
@@ -150,4 +150,9 @@ url = http://shop991772.vnn.mn/giuong-nem-shindai-d6.html
 match = 27.3%%
 title = nệm giường y tế
 url = https://m.vi.aliexpress.com/wholesale/nệm-giường-y-tế.html?browser_id=db2023d262f24ba49af0654f6b08492e&aff_trace_key=&aff_platform=msite&m_page_id=0011780f22280a17d0dc62f16249cb6a31b0d821ea&gclid=
+
+[www.wikitree.com]
+match = -45.5%%
+title = Category: Bo Giuong
+url = https://www.wikitree.com/wiki/Category:Bo_Giuong
 
