--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-20 17:32:40
+lastsearch = 2024-07-20 18:29:35
 
 [dreamland.vn]
-match = -64.0%%
-title = Cotton lụa PT08 - Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
+match = -32.0%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [demxanh.com]
 match = -24.0%%
@@ -28,8 +28,8 @@ url = http://unicom.mx/micrositios.aspx?i=https://xn--18-6kcaa2cmqgaegdjggepph9y
 
 [newsin.ir]
 match = -116.0%%
-title = Lk baden radiologie Cinepolis cartelera ensenada Sigcorp 1 rm ...
-url = https://newsin.ir/fa/frame.html?href=https://dsrpo.ru/2163975kpdf50j119der88fbsmobi4fe80y
+title = شعر عن اليوم الوطني ٩٢ The moms co review Labial maybelline ...
+url = https://newsin.ir/fa/?option=com_roojanews&view=frame&href=https://dwtao.ru/5826917wwwgoldenpondercomhk4fe43y
 
 [shopee.vn]
 match = 56.0%%
