CI images update

--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-07-20 14:45:54
+lastsearch = 2024-07-20 19:23:45
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -62,9 +62,9 @@ title = Gloyale's Content - Page 241
 url = https://www.ultimatesubaru.org/forum/profile/17152-gloyale/content/page/241/?all_activity=1
 
 [www.wanderthewest.com]
-match = -116.7%%
-title = New thermal pack: quilted with lower window covers | Page 2
-url = https://www.wanderthewest.com/threads/new-thermal-pack-quilted-with-lower-window-covers.25099/page-2
+match = 4.3%%
+title = Insulated Thermal Pack?
+url = https://www.wanderthewest.com/threads/insulated-thermal-pack.22462/
 
 [www.amazon.com]
 match = -50.0%%
@@ -85,4 +85,9 @@ url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1096095&VT=T
 match = -33.3%%
 title = Doesn't Anyone Want Our Elite Suites?
 url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=34863352
+
+[forum.ascendacoustics.com]
+match = -25.0%%
+title = Re: ~$350 TV Stand - Ascend Forum
+url = https://forum.ascendacoustics.com/showthread.php?5301-350-TV-Stand/&page=2
 
