--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-20 17:40:46
+lastsearch = 2024-07-20 19:22:51
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [foreverbedding.net]
-match = 44.4%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
