--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-20 18:33:37
+lastsearch = 2024-07-20 19:28:33
 
 [www.amazon.com]
 match = -309.1%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = 18.2%%
-title = Bọc ghế da ô tô
-url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
+match = -318.2%%
+title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
+url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
 
 [github.com]
 match = -81.8%%
