--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-20 16:32:28
+lastsearch = 2024-07-20 19:24:20
 
 [www.lazada.vn]
-match = -26.7%%
-title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-om-vuong/
+match = -166.7%%
+title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
+url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
 match = -166.7%%
