CI images update

--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-20 18:46:39
+lastsearch = 2024-07-20 20:21:24
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -52,9 +52,9 @@ title = 8 tiêm kích F-16 của Đài Loan bị hỏng do động đất
 url = https://vtcnews.vn/8-tiem-kich-f-16-cua-dai-loan-bi-hong-do-dong-dat-ar862782.html
 
 [trithucvn.co]
-match = -123.8%%
-title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
-url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
+match = -114.3%%
+title = Bộ Ngoại giao Mỹ và Đài Loan phản ứng về tuyên bố 'phí ...
+url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuyen-bo-phi-bao-ve-cua-ong-trump.html
 
 [antv.gov.vn]
 match = -123.8%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -76.2%%
+title = Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt Nam
+url = https://www.roc-taiwan.org/vn_vi/index.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -132,9 +132,9 @@ title = Trung Quốc đang làm gì tại căn cứ quân sự Ream ...
 url = https://www.bbc.com/vietnamese/articles/c296xk57w25o
 
 [vn.taiwantoday.tw]
-match = -100.0%%
-title = Bộ Ngoại giao dự kiến cấp hộ chiếu Đài Loan phiên bản ...
-url = https://vn.taiwantoday.tw/news.php?unit=458&post=184452
+match = -533.3%%
+title = Ảnh
+url = https://vn.taiwantoday.tw/list_photo.php?&iden=43973
 
 [chieuphimquocgia.com.vn]
 match = -80.0%%
