--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-20 18:13:52
+lastsearch = 2024-07-20 20:19:13
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -94,7 +94,7 @@ url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 [books.google.com]
 match = -156.2%%
 title = Địa chí Hòa Bình - Page 879 - Google Books Result
-url = https://books.google.com/books?id=jUZRAQAAMAAJ&pg=PA879&lpg=PA879&dq=chieu+lac+soc+10&source=bl&ots=Mz-HvGJUNn&sig=ACfU3U0LHp0KQxrhXEUxK9a9PE-oF2QB9g&hl=en&sa=X&ved=2ahUKEwjulr3BvrWHAxUaFFkFHZjMCTgQ6AF6BAgeEAM
+url = https://books.google.com/books?id=jUZRAQAAMAAJ&pg=PA879&lpg=PA879&dq=chieu+lac+soc+10&source=bl&ots=Mz-HvHGZPo&sig=ACfU3U2nB3MaMDZsX_uNlLPqENZzTYGNug&hl=en&sa=X&ved=2ahUKEwjdhePD2rWHAxUgF1kFHY1YCzkQ6AF6BAgjEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
