--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-20 17:51:33
+lastsearch = 2024-07-20 20:19:35
 
 [www.zillow.com]
 match = -69.2%%
@@ -540,4 +540,9 @@ url = https://www.lgbtmap.org/equality-maps/conversion_therapy
 match = -292.3%%
 title = EDC Las Vegas | May 16-18, 2025 | Las Vegas Motor Speedway
 url = https://lasvegas.electricdaisycarnival.com/
+
+[www.fayetteville-ar.gov]
+match = -215.4%%
+title = Police and Fire Dispatch Logs | Fayetteville, AR
+url = https://www.fayetteville-ar.gov/1333/Police-and-Fire-Dispatch-Logs
 
