--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-20 19:59:48
+lastsearch = 2024-07-20 20:21:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ ga chun poly
+match = -32.1%%
+title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
 
 [chandem.com.vn]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
