--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-20 18:28:51
+lastsearch = 2024-07-20 20:18:17
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -7.7%%
@@ -245,4 +245,9 @@ url = https://www.amerijet.com/
 match = -35.3%%
 title = IMITREX (sumatriptan) tablets
 url = https://gskpro.com/content/dam/global/hcpportal/en_US/Prescribing_Information/Imitrex_Tablets/pdf/IMITREX-TABLETS-PI-PIL.PDF
+
+[profiles.umassmed.edu]
+match = -35.3%%
+title = Junhao Mao PhD - UMass Profiles
+url = https://profiles.umassmed.edu/display/129943
 
