--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-20 12:49:33
+lastsearch = 2024-07-20 20:16:02
 
 [www.reddit.com]
 match = -60.0%%
@@ -17,9 +17,9 @@ title = Nệm Diamond RE 160x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 
 [forums.radioreference.com]
-match = -7.7%%
-title = Diamond X300N
-url = http://forums.radioreference.com/threads/diamond-x300n.399898/
+match = -83.3%%
+title = Base antenna
+url = http://forums.radioreference.com/threads/base-antenna.459722/
 
 [orchid.ganoksin.com]
 match = -24.0%%
@@ -27,9 +27,9 @@ title = Diamonds & sizes - Jewelry Discussion
 url = https://orchid.ganoksin.com/t/diamonds-sizes/33138
 
 [www.youtube.com]
-match = -80.0%%
-title = Comparing a Diamond X300 2m/70cm antenna with my home ...
-url = https://www.youtube.com/watch?v=CQJ67cRxpaM
+match = -72.0%%
+title = F&B Showcase: Custom 9mm NEO Diamond Cut Moissanite ...
+url = https://www.youtube.com/watch?v=7RkaOW1Bqqw
 
 [www.amazon.com]
 match = -36.0%%
@@ -80,4 +80,9 @@ url = https://www.m3post.com/forums/showthread.php?t=302487
 match = -100.0%%
 title = Interstellar (NEO-Pack) (Collector's Edition - Walmart ...
 url = https://www.hidefninja.com/community/threads/interstellar-neo-pack-collectors-edition-walmart-exclusive-usa.61065/page-3
+
+[forum.cartridgecollectors.org]
+match = -27.8%%
+title = Dutch 120mm Mortar
+url = https://forum.cartridgecollectors.org/t/dutch-120mm-mortar/297
 
