--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-20 19:59:17
+lastsearch = 2024-07-20 20:20:52
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
 match = 31.8%%
@@ -17,9 +17,9 @@ title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+match = 27.9%%
+title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -27,9 +27,9 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everon.online]
-match = 38.3%%
-title = Bảng Giá Đệm Lò Xo Everon King Koil Chính Hãng Giảm ...
-url = https://everon.online/blogs/news/bang-gia-dem-lo-xo-everon-king-koil-chinh-hang-giam-gia-tot-nhat
+match = 31.9%%
+title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
+url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
 match = 36.2%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 53.2%%
-title = Everon Quảng Bình Nệm lò xo Everon Kingkoil 180x200x27 CLOUD ...
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.html
+match = -270.0%%
+title = Nệm Everon
+url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
 
 [everonvn.com.vn]
 match = 25.6%%
