--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-20 19:27:05
+lastsearch = 2024-07-20 20:17:20
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+match = 5.0%%
+title = Giường da hạng sang mã DV14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
 match = -65.0%%
@@ -72,9 +72,9 @@ title = Thảm lông trải giường 1m x 2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm+lông+trải+giường+1m+x+2m
 
 [noithattamviet.net]
-match = -30.0%%
-title = Giường bọc nhung gỗ công nghiệp GB-14
-url = https://noithattamviet.net/giuong-boc-nhung-go-cong-nghiep-gb-14
+match = -10.0%%
+title = Giường ngủ gỗ công nghiệp GCN-14
+url = https://noithattamviet.net/giuong-ngu-go-cong-nghiep-gcn-14
 
 [nemphuoclong.vn]
 match = -55.0%%
