--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-20 17:15:21
+lastsearch = 2024-07-20 20:26:49
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -231.2%%
@@ -202,9 +202,9 @@ title = Hà Nội: Ngày tu an lạc tháng 5 năm Giáp Thìn tại chùa Bằn
 url = https://phatsuonline.vn/ha-noi-ngay-tu-an-lac-thang-5-nam-giap-thin-tai-chua-bang-74
 
 [www.facebook.com]
-match = -27.3%%
-title = meomeotalks
-url = https://www.facebook.com/meomeotalks/
+match = -87.5%%
+title = Dạy nhảy tại Đà Nẵng _ VL Dance Studio
+url = https://www.facebook.com/p/Dạy-nhảy-tại-Đà-Nẵng-_-VL-Dance-Studio-100069561101332/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
