--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-20 20:20:30
+lastsearch = 2024-07-20 20:28:12
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -17,9 +17,9 @@ title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
 url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [demxanh.com]
-match = -28.0%%
-title = Ruột chăn giá rẻ, ruột chăn cao cấp chính hãng
-url = https://demxanh.com/ruot-chan.html
+match = -36.0%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [khodem.vn]
 match = 24.0%%
@@ -37,9 +37,9 @@ title = Ruột gối Sông Hồng - Ruột đơn | Ruột ôm | Ruột vuông
 url = https://lombom.com/ruot-goi-song-hong/
 
 [thegioidemviet.vn]
-match = -48.0%%
-title = Ruột Gối Ôm Sông Hồng Chính Hãng 100%% - Giảm tới 15%%
-url = https://thegioidemviet.vn/ruot-goi-om-song-hong/
+match = -60.0%%
+title = Ruột Gối Sông Hồng Chính Hãng - Giảm tới 21%% [100%% ...
+url = https://thegioidemviet.vn/ruot-goi-song-hong/
 
 [cafef.vn]
 match = -88.0%%
@@ -72,9 +72,9 @@ title = Ruột gối Ôm Sông Hồng cao cấp chính hãng, KT: 38x100cm
 url = https://demviethong.com/ruot-goi-om-song-hong-38x100/
 
 [shopee.vn]
-match = -56.0%%
-title = Ruột gối hơi cao cấp, ruột gối nằm ngủ bông gòn kích ...
-url = https://shopee.vn/Ruột-gối-hơi-cao-cấp-ruột-gối-nằm-ngủ-bông-gòn-kích-thước-45x65-50x70cm-i.972153340.22833682644
+match = 16.0%%
+title = Ruột gối ôm Everhome cotton 70x100 ( 215 )
+url = https://shopee.vn/Ruột-gối-ôm-Everhome-cotton-70x100-(-215-)-i.435075614.11802912725
 
 [demsonghonghanoi.com]
 match = -80.0%%
