--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-20 20:20:19
+lastsearch = 2024-07-20 20:33:47
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
@@ -80,4 +80,9 @@ url = https://www.youtube.com/watch?v=GHsI7BMy734
 match = -68.0%%
 title = đầy đủ các loại máy cập bến để phục vụ cho ace đây ạ
 url = https://m.facebook.com/groups/317204786650138/posts/1049657896738153/
+
+[www.facebook.com]
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
