--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-20 14:52:05
+lastsearch = 2024-07-20 20:31:16
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -376.9%%
+title = som1aej 🌌🎉 AEJ Team宠粉福利Giveaway! 🎉🌌 我们将送出 ...
+url = https://www.instagram.com/chan.h.yee.98/p/C21XGIDJZVE/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -222,9 +222,9 @@ title =
 url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 
 [shopee.vn]
-match = -176.9%%
-title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+match = -92.3%%
+title = chân váy Dior oblique( hàng Au 99%%)
+url = https://shopee.vn/chân-váy-Dior-oblique(-hàng-Au-99-)-i.12819130.9794198496
 
 [hongkongfp.com]
 match = -269.2%%
