--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-20 19:56:56
+lastsearch = 2024-07-20 20:32:07
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -58,8 +58,8 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
 match = 0.0%%
-title = PHOTOTIMEVietnam
-url = https://www.facebook.com/phototimevn/
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ta_IN
 
 [lacvietauction.vn]
 match = -80.0%%
