--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-20 13:49:25
+lastsearch = 2024-07-20 20:34:40
 
 [www.lazada.vn]
 match = -88.9%%
@@ -22,9 +22,9 @@ title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
 match = -88.9%%
@@ -92,9 +92,9 @@ title = Nem rán, chạo tôm Việt Nam lọt top món ăn nhẹ ngon nhất ..
 url = https://cpfoods.vn/blogs/the-gioi-am-thuc/nem-ran-chao-tom-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi
 
 [farmersmarket.vn]
-match = 33.3%%
-title = Nem huế Gia Truyền
-url = https://farmersmarket.vn/products/nem-hue-gia-truyen
+match = 22.2%%
+title = Nem nướng Gia Truyền
+url = https://farmersmarket.vn/products/nem-nuong-gia-truyen
 
 [www.linkedin.com]
 match = 5.6%%
