--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-20 18:16:35
+lastsearch = 2024-07-20 20:32:52
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Nem Nướng
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -77.8%%
+title = NEM Fashion - NEM Fashion added a new photo.
+url = https://www.facebook.com/photo.php?fbid=744602131035820&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -38.9%%
+title = Nệm 2 người nằm giá rẻ tốt nhất 2024
+url = https://thegioinem.com/nem-2-nguoi-nam-gia-re-tot-nhat-2024.html
 
 [garan.vn]
 match = -166.7%%
