--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-20 17:34:01
+lastsearch = 2024-07-20 20:27:08
 
 [demxanh.com]
 match = -41.2%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/tham-trai-san-bali.html
 [tiki.vn]
 match = -141.2%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
 
 [www.lazada.vn]
 match = -158.8%%
@@ -22,9 +22,9 @@ title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
 url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
 
 [thegioidemviet.vn]
-match = -135.3%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -152.9%%
+title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
 
 [sammas.vn]
 match = -111.8%%
