CI images update

--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-20 19:23:56
+lastsearch = 2024-07-20 20:53:03
 
 [www.youtube.com]
 match = -48.0%%
@@ -37,9 +37,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [trithucvn.co]
-match = -80.0%%
-title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
-url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
+match = -72.0%%
+title = Bộ Ngoại giao Mỹ và Đài Loan phản ứng về tuyên bố 'phí ...
+url = https://trithucvn.co/the-gioi/bo-ngoai-giao-my-va-dai-loan-phan-ung-ve-tuyen-bo-phi-bao-ve-cua-ong-trump.html
 
 [books.google.com]
 match = -56.0%%
