--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-20 18:11:43
+lastsearch = 2024-07-20 20:44:54
 
 [www.galottery.com]
 match = -38.5%%
@@ -127,9 +127,9 @@ title = AskFMCSA | FMCSA - Department of Transportation
 url = https://www.fmcsa.dot.gov/registration/ask-fmcsa
 
 [beltline.org]
-match = -223.1%%
-title = Atlanta BeltLine // Where Atlanta Comes Together.
-url = https://beltline.org/
+match = -269.2%%
+title = Visit the Atlanta Beltline | Places To Go in Atlanta, GA
+url = https://beltline.org/visit/
 
 [www.niaaa.nih.gov]
 match = -38.5%%
@@ -432,7 +432,12 @@ title =
 url = https://www.northwestregisteredagent.com/llc/georgia/dissolve
 
 [www.kff.org]
-match = -276.9%%
-title = Medicaid Waiver Tracker: Approved and Pending Section ...
-url = https://www.kff.org/medicaid/issue-brief/medicaid-waiver-tracker-approved-and-pending-section-1115-waivers-by-state/
+match = -192.3%%
+title = Status of State Medicaid Expansion Decisions
+url = https://www.kff.org/affordable-care-act/issue-brief/status-of-state-medicaid-expansion-decisions-interactive-map/
+
+[baslg.com]
+match = 0.0%%
+title = 
+url = https://baslg.com/blog/juvenile-justice-system-georgia/
 
