--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-20 18:30:20
+lastsearch = 2024-07-20 20:50:29
 
 [www.instagram.com]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -94.4%%
-title = LNS International Corporation | Houston TX
-url = https://www.facebook.com/lnsus2018/
+match = 33.3%%
+title = NEM CHUA THANH HÓA
+url = https://www.facebook.com/NemChuaHaiAu/posts/𝐄𝐦-𝐱𝐢𝐧-𝐩𝐡𝐞́𝐩-𝐧𝐡𝐚̣̂𝐧-𝐝̵𝐚̣̆𝐭-𝐥𝐢̣𝐜𝐡-𝐍𝐞𝐦-𝐂𝐡𝐮𝐚-𝐀̆𝐧-𝐓𝐞̂́𝐭-𝐃̵𝐢-𝐁𝐢𝐞̂́𝐮-𝟐-𝟑-𝐧𝐠𝐚̀𝐲-𝐧𝐮̛̃𝐚-𝐭/789016583270704/
 
 [thegioinem.com]
 match = -111.1%%
@@ -42,14 +42,14 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -161.1%%
-title = Quay lại NEM NƯỚNG ĐÀ LẠT - BÉ... - Địa điểm ăn uống ...
-url = https://m.facebook.com/story.php/?story_fbid=763585472473204&id=100064652743390
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [lanchi.vn]
-match = -44.4%%
-title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 800ML
-url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-800ml/
+match = 16.7%%
+title = NEM CHUA HÀ THÀNH 200G
+url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
 match = -155.6%%
