--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-20 13:34:58
+lastsearch = 2024-07-20 20:51:34
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -37,9 +37,9 @@ title = Thảm Sofa Biên Hòa
 url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [www.thamvintage.vn]
-match = -25.0%%
-title = Thảm Vintage
-url = https://www.thamvintage.vn/
+match = 12.5%%
+title = Thảm chân giường
+url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
 match = -72.7%%
