CI images update

--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-20 18:46:28
+lastsearch = 2024-07-20 21:16:19
 
 [everon.online]
-match = -8.8%%
-title = Bảng Giá Bộ Sưu Tập Chăn Ga Gối Everon Chính Hãng ...
-url = https://everon.online/collections/bo-chan-ga-goi-everon
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
 match = -4.3%%
