--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-20 19:21:54
+lastsearch = 2024-07-20 21:12:48
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -164.7%%
+title = How can the HOA kick you out of your house when you ...
+url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
 
 [lauragoodsonart.com]
 match = 47.1%%
