--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-20 11:17:11
+lastsearch = 2024-07-20 21:19:14
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/MC_Ren
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfmLMll7&sig=ACfU3U1Y-kFsUc5YnUObKEmUXIq6XE_uQw&hl=en&sa=X&ved=2ahUKEwjhy7mw4bSHAxX5LEQIHXdgDWQQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfmPImna&sig=ACfU3U0NqiaELz1KraQOqdU0SL4nQp-5oQ&hl=en&sa=X&ved=2ahUKEwj4sJ7557WHAxVOhIkEHd-3ADEQ6AF6BAg8EAM
 
 [www.phillyvoice.com]
 match = 0.0%%
