--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-20 20:51:04
+lastsearch = 2024-07-20 21:18:03
 
 [changagoidemsonghong.com]
-match = -50.0%%
-title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
-url = https://changagoidemsonghong.com/
+match = 4.2%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = -8.3%%
-title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+match = 20.8%%
+title = Chăn ga gối cotton Notag 4 món 16
+url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
