--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-20 20:48:47
+lastsearch = 2024-07-20 21:15:17
 
 [demxanh.com]
 match = 26.3%%
@@ -17,14 +17,14 @@ title = Chăn lông KQ đẹp loại 5kg
 url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 
 [www.diepxuan.com]
-match = 34.8%%
-title = Điệp Xuân Chăn KQ không sóng 5kg
+match = 8.7%%
+title = Chăn KQ không sóng 5kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
 
 [thegioidemonline.com]
-match = 45.0%%
-title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html
+match = 39.1%%
+title = Chăn măng lông KQ loại 7kg
+url = https://thegioidemonline.com/chan-bang-long-loai-7kg.html
 
 [www.youtube.com]
 match = -87.0%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -143.5%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -104.3%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
