--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-20 17:13:02
+lastsearch = 2024-07-20 21:10:34
 
 [demxanh.com]
 match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [uannga.vn]
 match = 56.5%%
