--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-20 18:25:11
+lastsearch = 2024-07-20 21:18:21
 
 [chieutruc.info]
 match = -60.0%%
@@ -175,4 +175,9 @@ url = https://h5.lazada.vn/products/chieu-tre-truc-tam-van-go-tay-bac-cao-bang-m
 match = -28.0%%
 title = Sở Thông tin và Truyền thông tỉnh Cao Bằng
 url = https://sotttt.caobang.gov.vn/
+
+[www.chieutretruc.com]
+match = 0.0%%
+title = ĐỊA CHỈ MUA CHIẾU TRÚC CAO SƠN TẠI HCM
+url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm.html
 
