--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-20 20:46:53
+lastsearch = 2024-07-20 21:16:41
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,8 +17,8 @@ title = Thảm trải giường cao su non màu xanh nhạt
 url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
 url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
@@ -57,8 +57,8 @@ title = Giường phòng ngủ sáng sủa 180x200 (2 giường sinlge chung ...
 url = https://www.airbnb.com.vn/rooms/19798001
 
 [ru9.vn]
-match = -90.9%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
+match = -86.4%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
