--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-20 20:45:25
+lastsearch = 2024-07-20 21:13:53
 
 [www.everonqb.com]
-match = -60.9%%
-title = Vỏ gối ES1804 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-es1804-45x65.html
+match = -8.7%%
+title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
+url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -22,8 +22,8 @@ title = Bộ chăn ga gối Everon ES1804
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 
 [www.diepxuan.com]
-match = 43.5%%
-title = Điệp Xuân Vỏ gối ôm ES1715 80x100
+match = 34.8%%
+title = Vỏ gối ôm ES1715 80x100 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
 
 [forum.cartridgecollectors.org]
