CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-20 17:39:39
+lastsearch = 2024-07-20 21:29:32
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -17,14 +17,14 @@ title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
-url = https://www.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+match = 22.2%%
+title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = -3.7%%
+title = Chăn tuyết nhung hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [demxanh.com]
 match = -18.5%%
