--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-20 18:18:05
+lastsearch = 2024-07-20 21:30:25
 
 [www.instagram.com]
-match = -261.5%%
-title = Hoi Chan | Happy Valentine's Day 💖! Very happy to work ...
-url = https://www.instagram.com/hoichandraws/p/CLR4vtsBEwd/
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
@@ -17,8 +17,8 @@ title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
 url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
-match = -307.7%%
-title = Hoi Chan draws on scientific illustrations to create 'muted ...
+match = -253.8%%
+title = Hoi Chan draws on scientific illustrations to create ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
