--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-20 17:16:14
+lastsearch = 2024-07-20 21:28:39
 
 [www.lazada.vn]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = 0.0%%
-title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
 match = 4.3%%
@@ -32,9 +32,9 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.yellowpages.vn]
-match = 0.0%%
-title = danh sách Chiếu Cói
-url = https://www.yellowpages.vn/tgcls/20490435/Chiếu-Cói.html?j=1
+match = 15.8%%
+title = sản xuất chiếu nhựa
+url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [m.facebook.com]
 match = 4.3%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
+match = 13.0%%
+title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
