--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-20 20:33:14
+lastsearch = 2024-07-20 21:34:21
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 10.7%%
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = 3.6%%
-title = L'atelier franois - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://detsad147vrn.ru/79386142czdrh98msd4cfdv4fe36a
+match = -39.3%%
+title = Criminology jobs columbus ohio - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--43-6kch9bxbh4f.xn--p1ai/V2EPYSIDs53afe
 
 [news.google.it]
 match = -3.6%%
