--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-20 11:48:45
+lastsearch = 2024-07-20 21:32:06
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -170.6%%
-title = Florida HOA. Are HOAs still able to enter properties ...
-url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
+match = -188.2%%
+title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
+url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
-match = -141.2%%
-title = anyone know how to find who the HOA president is? ...
-url = https://www.reddit.com/r/fuckHOA/comments/10lkjnf/anyone_know_how_to_find_who_the_hoa_president_is/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [spectrumam.com]
 match = -76.5%%
@@ -57,9 +57,9 @@ title = Fair Housing Law – What is Required of Owner ...
 url = https://www.ochhoalaw.com/fair-housing-law-what-is-required-of-owner-associations/
 
 [idfpr.illinois.gov]
-match = 0.0%%
-title = 
-url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/faq/ccic-ombudsperson-faq-10-which-law-applies-to-my-association-12-20-2016.pdf
+match = -170.6%%
+title = Rights and Responsibilities of Association Board Members
+url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.leg.state.fl.us]
 match = -170.6%%
@@ -107,8 +107,8 @@ title = Homeowners' Associations
 url = https://www.azleg.gov/Briefs/Senate/HOMEOWNERS' ASSOCIATIONS 2022.PDF
 
 [business.nv.gov]
-match = -170.6%%
-title = Homeowners Association Complaints - Business and Industry
+match = -52.9%%
+title = Homeowners Association Complaints
 url = https://business.nv.gov/Homeowner/Homeowners_Association_Complaints/
 
 [www.nolo.com]
