CI images update

--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-20 12:36:37
+lastsearch = 2024-07-20 21:52:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -252,9 +252,9 @@ title = Ngôi nhà điên nhưng con người thì không điên
 url = https://www.tapchikientruc.com.vn/tac-gia-tac-pham/ngoi-nha-dien-nhung-con-nguoi-thi-khong-dien.html
 
 [m.facebook.com]
-match = -95.2%%
-title = Tuyển dụng Content - Marketing | 🌿🌿 TUYỂN NHÂN VIÊN ...
-url = https://m.facebook.com/groups/273258083431107/posts/1661053907984844/
+match = -42.9%%
+title = CHỊ CẦN VÀI BẠN PART TIME HOẶC FULL ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8320659501291357/
 
 [tuoitre.vn]
 match = -119.0%%
@@ -410,4 +410,14 @@ url = https://www.tayninh.gov.vn/vi/news/dua-nghi/duong-tuan-tra-bien-gioi-tinh-
 match = -90.5%%
 title = Việt Nam xuất siêu 11,88 tỷ USD - Báo Thái Bình điện tử
 url = https://baothaibinh.com.vn/tin-tuc/5/204037/viet-nam-xuat-sieu-11-88-ty-usd
+
+[www.ipvietnam.gov.vn]
+match = -133.3%%
+title = Bảo hộ Chỉ dẫn địa lý "Cao Bằng" cho sản phẩm trúc sào ...
+url = https://www.ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1
+
+[www.vietnam.vn]
+match = -119.0%%
+title = Galaxy Z Flip6 phiên bản giới hạn dành riêng cho vận ...
+url = https://www.vietnam.vn/galaxy-z-flip6-phien-ban-gioi-han-danh-rieng-cho-van-dong-vien-tai-paris-2024/
 
