--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-20 20:30:00
+lastsearch = 2024-07-20 21:50:18
 
 [silverwow.net]
 match = -255.6%%
@@ -350,4 +350,9 @@ url = https://www.hsph.harvard.edu/
 match = -122.2%%
 title = Jason Chan | UCSF Profiles
 url = https://profiles.ucsf.edu/jason.w.chan
+
+[shopee.sg]
+match = -188.9%%
+title = 88 Chan Kong Thye Chilli Paste 3kg
+url = https://shopee.sg/88-Chan-Kong-Thye-Chilli-Paste-3kg-i.273437342.5954728914
 
