--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-20 20:31:28
+lastsearch = 2024-07-20 21:46:18
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -10.7%%
+title = Hướng dẫn chiếu đèn điều trị vàng da sơ sinh
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/nhi/huong-dan-chieu-den-dieu-tri-vang-da-so-sinh/
 
 [www.hotdeal.vn]
 match = -32.1%%
@@ -27,9 +27,9 @@ title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
 url = https://www.youtube.com/watch?v=jnvflW7R2LY
 
 [m.facebook.com]
-match = -32.1%%
-title = TUYỂN DỤNG KỸ THUẬT VIÊN SPA | ☘️UP Skinlab cần ...
-url = https://m.facebook.com/groups/1529017447196745/posts/7585938074837955/
+match = 25.0%%
+title = CHỢ CƯ DÂN ECOPARK (Kênh nội bộ)
+url = https://m.facebook.com/groups/1786488038270373/posts/3637942186458273/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -17.9%%
-title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
+match = -46.4%%
+title = Những câu hỏi thường gặp tại Khoa Khám bệnh chuyên khoa ...
+url = https://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-JP-Site/ja_JP/-/JPY/ShowDocument-File?ProductSKU=MDA_CHEM-808803&DocumentType=MSD&DocumentId=808803_SDS_VN_VI.PDF&DocumentUID=43004958&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = 28.6%%
-title = Nội thất nhựa đài loan thành phong
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/
+match = -46.4%%
+title = Thẩm Mỹ Viện | Có ai tuyển nhân viên spa nuôi ăn ở không ạ
+url = https://www.facebook.com/groups/973966372773445/posts/có-ai-tuyển-nhân-viên-spa-nuôi-ăn-ở-không-ạ-e-biết-triệt-lông-gội-đầu-massage-va/2733132316856833/
 
 [www.favri.org.vn]
 match = -10.7%%
