--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-20 20:16:50
+lastsearch = 2024-07-20 21:50:10
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,8 +27,8 @@ title = Ruột nệm Korea 150x190x09 - Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 
 [www.linkedin.com]
-match = 0.0%%
-title = 
+match = -56.0%%
+title = How to get a job in Korea as a non-Korean (again)
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [greenhearttravel.org]
