--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-20 15:46:55
+lastsearch = 2024-07-20 21:44:20
 
 [shopee.vn]
-match = -25.0%%
-title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
-url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
+match = -70.8%%
+title = [ 🔥 Mẫu mới 🔥 ] Thảm lau chân cao cấp hàng loại 1 lông ...
+url = https://shopee.vn/-🔥-Mẫu-mới-🔥-Thảm-lau-chân-cao-cấp-hàng-loại-1-lông-cừu-siêu-mềm-mại-thấm-hút-tốt-40x60-GIÁ-SỐC--i.189593580.14011936530
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -77,9 +77,9 @@ title = Thảm dậm chân giá rẻ, thảm chùi chân đế cao su
 url = http://thamthienhoang.com/tham-dam-chan/tham-cua-de-cao-su/
 
 [latiendadeljardin.com]
-match = -20.8%%
-title = Thảm chùi chân 40x60 cm màu đen hoan nghênh
-url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.html
+match = -25.0%%
+title = Thảm chùi chân 40x60 cm chào mừng bạn về nhà
+url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-bienvenidos-a-casa.html
 
 [sieuthinguyenkim.com]
 match = -29.2%%
