CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-20 21:13:42
+lastsearch = 2024-07-20 22:14:44
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC2Dlwuy&sig=ACfU3U2FgLyDzTPgEbnk7K7elEpbl-o2Zw&hl=en&sa=X&ved=2ahUKEwidyr7a5rWHAxXnl4kEHVvFAUcQ6AF6BAhAEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC2DpsAA&sig=ACfU3U3hEnRrrs5BR3MbkXo3Uj0cmU-TLw&hl=en&sa=X&ved=2ahUKEwjNi9Ws9LWHAxXkDzQIHRkEAiYQ6AF6BAhDEAM
 
 [www.diepxuan.com]
 match = -81.0%%
