--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-20 21:31:57
+lastsearch = 2024-07-20 22:18:46
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -12,9 +12,9 @@ title = Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.instagram.com]
-match = -35.0%%
-title = Fabiana Justus (@fabianajustus)
-url = https://www.instagram.com/fabianajustus/?hl=en
+match = -110.0%%
+title = 김가일 | Ga Kim - Coreano 🇰🇷 Fácil e Rápido (@gakim0)
+url = https://www.instagram.com/gakim0/?hl=en
 
 [www.reddit.com]
 match = -115.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -140.0%%
-title = Billy Joel - We Didn't Start the Fire (Official HD Video)
-url = https://www.youtube.com/watch?v=eFTLKWw542g
+match = -155.0%%
+title = Korean Pronunciation Guide - 네 (NE or DE?) & 뭐 (MWO or ...
+url = https://www.youtube.com/watch?v=zhf9NWKHjqE
 
 [som.yale.edu]
 match = -110.0%%
@@ -312,9 +312,9 @@ title = Original Article
 url = https://synapse.koreamed.org/articles/1119644
 
 [www.quora.com]
-match = -115.0%%
-title = What Korean letter looks like a 12 or is paired up ...
-url = https://www.quora.com/What-Korean-letter-looks-like-a-12-or-is-paired-up-with-another-to-look-like-a-12
+match = -100.0%%
+title = Why did my niece get 12%% Korean in her DNA test ...
+url = https://www.quora.com/Why-did-my-niece-get-12-Korean-in-her-DNA-test-My-side-of-the-family-is-Eastern-European-Italian-French-and-German-while-her-mother-is-Danish
 
 [liquipedia.net]
 match = -15.0%%
@@ -355,4 +355,9 @@ url = http://wanderingchopsticks.blogspot.com/2008/10/mam-ruoc-vietnamese-fermen
 match = -155.0%%
 title = How to show `\` instead of special character `₩` in path ...
 url = https://stackoverflow.com/questions/77536855/how-to-show-instead-of-special-character-₩-in-path-separator-for-windows-f
+
+[www.hjnews.com]
+match = -135.0%%
+title = Column: Glimpses of times when there was more respect, ...
+url = https://www.hjnews.com/opinion/columns/column-glimpses-of-times-when-there-was-more-respect-everywhere/article_06efcae6-4608-11ef-a6df-eb750f6be560.html
 
