--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-20 16:34:46
+lastsearch = 2024-07-20 22:11:49
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -202,9 +202,9 @@ title = TUI Cruises 26 March 2025
 url = https://www.cruisetimetables.com/tuicruises-26mar2025.html
 
 [www.tiktok.com]
-match = -391.7%%
-title = I think it is harder to find foods that you can't freeze rather ...
-url = https://www.tiktok.com/@thismumcooks/video/7386731104956435744
+match = -375.0%%
+title = Yêu xa từ khi tui ở Việt Nam bạn ở Mỹ đến khi tui sang Hàn đi ...
+url = https://www.tiktok.com/@if.inkorea/video/7393223394453425426
 
 [www.yesasia.com]
 match = -341.7%%
