--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-07-20 20:30:55
+lastsearch = 2024-07-20 22:14:21
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -22,9 +22,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/asin/B077S3WNR3
 
 [www.talkbass.com]
-match = -70.8%%
-title = Accugroove Tri 112L v Epi NYC 410 v Epi UL310 ...
-url = https://www.talkbass.com/threads/accugroove-tri-112l-v-epi-nyc-410-v-epi-ul310-v-sadowsky-sa410.302104/
+match = -95.8%%
+title = Best 2x15 setup you've found...preferably pair of 1x15's
+url = https://www.talkbass.com/threads/best-2x15-setup-youve-found-preferably-pair-of-1x15s.1183155/page-3
 
 [www.theflyfishingforum.com]
 match = -4.2%%
