--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-20 19:56:36
+lastsearch = 2024-07-20 22:19:28
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -7.1%%
-title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
-url = https://www.sendo.vn/chieu-nhua-van-phong.htm
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 4m, 3m chiếu ăn cơm hàng đẹp ...
+url = https://www.sendo.vn/chieu-nhua-gap-gon-size-4m-3m-chieu-an-com-hang-dep-nhieu-mau-109448350.html
 
 [mia.vn]
 match = -39.3%%
