--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-20 17:33:09
+lastsearch = 2024-07-20 22:13:03
 
 [demtot.com]
 match = 4.8%%
@@ -22,9 +22,9 @@ title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
 url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.com]
-match = -52.4%%
-title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
+match = -57.1%%
+title = Đệm lò xo 1m5x1m9 (150x190cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Nệm Tuấn Anh - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Bảng giá khuyến mại đệm lò xo Victoria chất lượng cao!
-url = https://sieuthidemonline.vn/dem-lo-xo-victoria/
+match = -66.7%%
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [demsingapore.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -133.3%%
-title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
-url = https://lombom.com/dem-nem/page/2/
+match = -119.0%%
+title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
+url = https://lombom.com/dem-lo-xo/
 
 [www.linkedin.com]
 match = 4.8%%
