--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-20 21:29:52
+lastsearch = 2024-07-20 22:13:59
 
 [changagoidemtamhao.com]
 match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LSP
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
 match = -70.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -100.0%%
-title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
+match = -70.0%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
 
 [www.facebook.com]
 match = -45.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-côn
 [shopee.vn]
 match = -70.0%%
 title = bộ chăn ga pyeoda gấm sần giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/ 
 
 [tchome.vn]
 match = -10.0%%
