--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-20 20:32:52
+lastsearch = 2024-07-20 22:19:50
 
 [www.lazada.vn]
-match = -61.1%%
-title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+match = -88.9%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [www.facebook.com]
-match = -77.8%%
-title = NEM Fashion - NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=744602131035820&id=100064581196454&set=a.651941746968526
+match = -33.3%%
+title = Nem Nướng
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
 match = -38.9%%
