CI images update

--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-20 22:32:07
+lastsearch = 2024-07-20 22:45:43
 
 [demxanh.com]
 match = -131.6%%
@@ -62,9 +62,9 @@ title = Hon Mun Island - All You Need to Know BEFORE You Go ...
 url = https://www.tripadvisor.com/Attraction_Review-g293928-d3857023-Reviews-Hon_Mun_Island-Nha_Trang_Khanh_Hoa_Province.html
 
 [www.vietvet.org]
-match = -100.0%%
-title = Untitled
-url = http://www.vietvet.org/army282.htm
+match = -31.6%%
+title = Lost and Found, Others, Section #4
+url = http://www.vietvet.org/othercc.htm
 
 [www.vietnamcoracle.com]
 match = -31.6%%
