--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-20 21:16:08
+lastsearch = 2024-07-20 22:47:35
 
 [shopee.vn]
 match = -17.4%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
 url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = -30.4%%
+title = Xưởng sản xuất chiếu nhựa Dũng Tiến - Thái Bình
+url = https://www.facebook.com/p/Xưởng-sản-xuất-chiếu-nhựa-Dũng-Tiến-Thái-Bình-100076145417043/?locale=vi_VN
 
 [www.sendo.vn]
 match = 0.0%%
