--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-20 21:33:26
+lastsearch = 2024-07-20 22:50:56
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -57,9 +57,9 @@ title = Thế Giới Chiếu Trúc
 url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = CUNG CẤP CHIẾU TRÚC QUẬN PHÚ NHUẬN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-phu-nhuan-75.html
+match = -14.3%%
+title = TIN TRONG NƯỚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
 
 [www.xskthcm.com]
 match = -83.3%%
