--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-20 20:19:35
+lastsearch = 2024-07-20 22:49:46
 
 [www.zillow.com]
 match = -69.2%%
@@ -102,9 +102,9 @@ title = GA Color Moisturizing Lip Beauty 18 Ladies Wear Cup ...
 url = https://www.walmart.com/ip/GA-Color-Moisturizing-Lip-Beauty-18-Ladies-Wear-Cup-Long-Lasting-Non-Stick-Lip-Gloss-Long-Lasting-Gloss-Non-Fading-Lipstick/3206017657
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
 match = -61.5%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -53.8%%
+title = Jacq Gani (@gainswithjacq)
+url = https://www.instagram.com/gainswithjacq/?hl=en
 
 [www.mariettaga.gov]
 match = -38.5%%
