CI images update

--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-20 22:30:33
+lastsearch = 2024-07-20 23:34:24
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -170,4 +170,9 @@ url = https://www.rebalancetcm.com/3-acupressure-points-to-aid-digestion/
 match = -200.0%%
 title = Ren 12 (CO 12) - Acupuncture Points
 url = https://www.acufinder.com/Acupuncture+Points/Ren+12+(CO+12)/333
+
+[www.va.gov]
+match = -210.0%%
+title = Survivors Pension | Veterans Affairs
+url = https://www.va.gov/pension/survivors-pension/
 
