--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-20 21:30:14
+lastsearch = 2024-07-20 23:42:14
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -114.3%%
+title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo Đanh ...
+url = https://www.youtube.com/watch?v=XMZHfpjUzhg
 
 [m.facebook.com]
 match = -95.2%%
@@ -32,9 +32,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [thangnhomdongtam.com]
-match = -109.5%%
-title = Thang nhôm gấp 4 khúc TMH3D LD Đài Loan - Cao cấp - Giá tốt
-url = https://thangnhomdongtam.com/san-pham/thang-nhom-gap-4-khuc-chu-m-hang-lien-doanh-dai-loan-tmh3d
+match = -81.0%%
+title = Thang nhôm gấp 4 khúc THM4 LD Đài Loan - Hàng Cao cấp
+url = https://thangnhomdongtam.com/san-pham/thang-nhom-chu-m-cao-cap-hang-lien-doanh-dai-loan-thm4-can-nang-16-kg
 
 [thangnhomnhapkhau.com]
 match = -47.6%%
@@ -132,9 +132,9 @@ title = Trung Quốc đang làm gì tại căn cứ quân sự Ream ...
 url = https://www.bbc.com/vietnamese/articles/c296xk57w25o
 
 [vn.taiwantoday.tw]
-match = -533.3%%
-title = Ảnh
-url = https://vn.taiwantoday.tw/list_photo.php?&iden=43973
+match = -100.0%%
+title = Bộ Ngoại giao dự kiến cấp hộ chiếu Đài Loan phiên bản ...
+url = https://vn.taiwantoday.tw/news.php?unit=458&post=184452
 
 [chieuphimquocgia.com.vn]
 match = -80.0%%
