--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-20 15:20:13
+lastsearch = 2024-07-20 23:37:34
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -137,8 +137,8 @@ title = Closed Corporate Integrity Agreements | Compliance
 url = https://oig.hhs.gov/compliance/corporate-integrity-agreements/closed-cias.asp
 
 [profiles.ucsf.edu]
-match = -115.4%%
-title = Michael Matthay, MD - UCSF Profiles
+match = -23.1%%
+title = Michael Matthay, MD
 url = https://profiles.ucsf.edu/michael.matthay
 
 [bse.berkeley.edu]
