--- a/images/ruot-nem-korea-180x200x09/config.ini
+++ b/images/ruot-nem-korea-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 lastopen = 2024-06-11 23:29:58
 
 [search]
-lastsearch = 2024-07-20 22:47:15
+lastsearch = 2024-07-20 23:33:21
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,13 +12,13 @@ title = Ruột nệm Korea 180x200x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-nem-korea-180x200x09.html
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [www.linkedin.com]
-match = -56.0%%
-title = How to get a job in Korea as a non-Korean (again)
+match = 0.0%%
+title = 
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
