--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-20 23:21:10
+lastsearch = 2024-07-20 23:34:01
 
 [demxanh.com]
 match = -41.2%%
@@ -67,7 +67,7 @@ title = Những thông số kích thước thảm trải sàn thường dùng ch
 url = http://thamachau.vn/nhung-thong-so-kich-thuoc-tham-trai-san-thuong-dung
 
 [demtot.vn]
-match = 5.9%%
-title = Lưu trữ Thảm BALI trải sàn
+match = -182.4%%
+title = Lưu trữ Thảm BALI trải sàn - Chăn ga gối đệm thảm Trần Hậu
 url = https://demtot.vn/tham-nhap-khau
 
