--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-20 21:11:27
+lastsearch = 2024-07-20 23:35:09
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
