--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-20 17:32:49
+lastsearch = 2024-07-20 23:37:13
 
 [gobearcats.com]
 match = -142.1%%
@@ -197,9 +197,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [gladstone.org]
-match = 0.0%%
-title = Katie Pollard, PhD
-url = https://gladstone.org/people/katie-pollard
+match = 5.3%%
+title = Alex Marson, MD, PhD
+url = https://gladstone.org/people/alex-marson
 
 [www.nature.com]
 match = -173.7%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = 15.8%%
-title = Charles Chiu, MD, PhD
-url = https://profiles.ucsf.edu/charles.chiu
+match = 5.3%%
+title = Arun Wiita, MD, PhD
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
