CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-20 20:12:32
+lastsearch = 2024-07-21 00:17:50
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Blue Bayou (2021)
-url = https://www.imdb.com/title/tt11121664/
+match = -14.3%%
+title = The Jungle Book (2016)
+url = https://www.imdb.com/title/tt3040964/
 
 [www.etsy.com]
 match = 35.7%%
@@ -27,8 +27,8 @@ title = Ao Dai Xanh Mint
 url = https://www.etsy.com/market/ao_dai_xanh_mint
 
 [www.evergreenrecreation.com]
-match = -21.4%%
-title = Ice Skating & Hockey
+match = -157.1%%
+title = ICE SKATING & HOCKEY | Evergreen Park and ...
 url = https://www.evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.bbc.com]
@@ -207,9 +207,9 @@ title =
 url = https://www.mountsinai.org/health-library/herb/green-tea
 
 [www.instagram.com]
-match = -121.4%%
-title = ⚡️ 𝗠𝗔𝗜𝗦 𝗟𝗔 + 𝗦𝗢𝗨𝗧𝗛𝗘𝗥𝗡𝗦 + 𝗫𝗔𝗡𝗛 𝗦𝗔𝗧𝗨𝗥𝗗𝗔𝗬 ⚡️ ...
-url = https://www.instagram.com/mielbrewery/p/C5tDB3BrwS1/
+match = -64.3%%
+title = Riley Green (@rileyduckman)
+url = https://www.instagram.com/rileyduckman/?hl=en
 
 [www.englandgolf.org]
 match = -264.3%%
