--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-20 22:16:39
+lastsearch = 2024-07-21 00:12:57
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -370,4 +370,9 @@ url = https://labs.utsouthwestern.edu/beckham-lab/publications
 match = -216.7%%
 title = Sheet1
 url = https://nscresearchcenter.org/wp-content/uploads/NSC_SCHOOL_CODE_TO_IPEDS_UNIT_ID_XWALK.xlsx
+
+[sd25.senate.ca.gov]
+match = -65.0%%
+title = School Start Time research & information
+url = https://sd25.senate.ca.gov/sites/sd25.senate.ca.gov/files/research_booklet_sb_328_pdf.pdf
 
