--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-20 21:31:15
+lastsearch = 2024-07-21 00:13:19
 
 [anlacphat.com]
 match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
+title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
+url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
 
 [thacoanlac.vn]
 match = -55.6%%
@@ -17,8 +17,8 @@ title = FD990-4WD
 url = https://thacoanlac.vn/forland-fd990-4wd
 
 [vietnamese.alibaba.com]
-match = -225.0%%
-title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm ...
+match = -256.2%%
+title = tầm nhìn 30-90x100 bak4 fmc spotting phạm vi không thấm nước ...
 url = https://vietnamese.alibaba.com/product-detail/Visionking-30-90x100-Bak4-FMC-Spotting-1601019269249.html
 
 [dutoan.gxd.vn]
