--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-20 19:54:48
+lastsearch = 2024-07-21 00:12:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đ
 url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -30.4%%
-title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
-url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
+match = -87.0%%
+title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
@@ -337,9 +337,9 @@ title = Một số điểm sáng tình hình kinh tế – xã hội quý II và
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/mot-so-diem-sang-tinh-hinh-kinh-te-xa-hoi-quy-ii-va-6-thang-dau-nam-2024/
 
 [vnexpress.net]
-match = 4.3%%
-title = Mẹo giặt chiếu trúc không dùng nước
-url = https://vnexpress.net/meo-giat-chieu-truc-khong-dung-nuoc-4764234.html
+match = -26.1%%
+title = Cuộc đấu trí 75 ngày ở hội nghị Geneve
+url = https://vnexpress.net/cuoc-dau-tri-75-ngay-o-hoi-nghi-geneve-4771579.html
 
 [danang.gov.vn]
 match = -117.4%%
@@ -420,4 +420,9 @@ url = https://tayninh.dcs.vn/vi/news/thoi-su/tuyen-truyen-ky-niem-80-nam-ngay-to
 match = 47.8%%
 title = Chiếu trúc Việt Nam giá rẻ.
 url = https://www.5giay.vn/threads/chieu-truc-viet-nam-gia-re.8437156/
+
+[baolaichau.vn]
+match = -78.3%%
+title = Cứu sống người đàn ông bị rơi xuống vực trong rừng
+url = https://baolaichau.vn/xã-hội/cứu-sống-người-đàn-ông-bị-rơi-xuống-vực-trong-rừng
 
