--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-20 23:52:25
+lastsearch = 2024-07-21 00:13:40
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = Tag: TUI Group
 url = https://www.ttgasia.com/tag/tui-group/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 0.0%%
+title = 
+url = https://www.tui.co.uk/destinations/faq/before-you-go/travel-and-health-requirements
 
 [maritime-executive.com]
 match = -316.7%%
